reverse fix set Filter overflow issue in Firefox

--- a/app/assets/stylesheets/filter.scss
+++ b/app/assets/stylesheets/filter.scss
@@ -18,8 +18,11 @@
     left: -moz-calc(50% - 330px);
     left: -ms-calc(50% - 330px);
     left: calc(50% - 330px);
+
     max-height: 80%;
-    overflow: hidden;
+    -moz-height:80%;
+
+    overflow: auto;
     //margin: 0 0 0 -20%;
     background-color: #fff;
     -moz-box-shadow:1px 1px 6px 4px #141414;
